--- a/backend/env.example
+++ b/backend/env.example
@@ -13,12 +13,21 @@ JWT_EXPIRES_IN=7d
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+AUTH_RATE_LIMIT_MAX=50
 
 # CORS Configuration
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000,http://127.0.0.1:5500,http://localhost:5500
 
 # Logging
 LOG_LEVEL=info
 
 # Security
 BCRYPT_ROUNDS=12
+
+# Email Configuration (for OTP verification)
+EMAIL_SERVICE=gmail
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
+EMAIL_FROM=Notes App <noreply@notesapp.com>
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
