Complete Notes App with authentication, CRUD operations, and deployment ready

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 node_modules/
 backend/node_modules/
 
-# Environment variables
-.env
-backend/.env
+# # Environment variables
+# .env
+# backend/.env
 
