--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "cd backend && node server.js",
     "dev": "cd backend && nodemon server.js",
     "build": "echo 'No build step required'",
-    "test": "echo 'No tests specified'"
+    "test": "echo 'No tests specified'",
+    "install-deps": "cd backend && npm install"
   },
   "keywords": [
     "notes",
@@ -17,9 +18,33 @@
     "express",
     "mongodb"
   ],
-  "author": "Your Name",
+  "author": "Dazeez",
   "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0",
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^6.10.0",
+    "express-validator": "^7.0.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "compression": "^1.7.4",
+    "nodemailer": "^6.9.7"
+  },
   "engines": {
-    "node": ">=18.0.0"
-  }
+    "node": ">=18.0.0",
+    "npm": ">=6.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dazeez1/notes-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dazeez1/notes-app/issues"
+  },
+  "homepage": "https://github.com/dazeez1/notes-app#readme"
 }
